# awesome_attractors

./: CMakeLists.txt
include/: attractor.hpp  camera.hpp  nbody.cuh  obj_renderer.hpp  objloader.hpp  particle_renderer.hpp  shaders.hpp  stb_image.h
shaders/: fragment.frag  vertex.vert
src/: attractor.cpp  camera.cpp  nbody.cu  obj_renderer.cpp  objloader.cpp  particle_renderer.cpp  shaders.cpp  window.cpp
